[gd_scene load_steps=7 format=2]

[ext_resource path="res://asset/ui/icons/squad_icon/icon_squad_spearman.png" type="Texture" id=1]
[ext_resource path="res://asset/ui/fonts/montserrat_eb_16.tres" type="DynamicFont" id=2]
[ext_resource path="res://asset/ui/bar/bar.png" type="Texture" id=3]
[ext_resource path="res://asset/scene/menu/squad_panel_detail_menu/squad_panel_detail_menu.gd" type="Script" id=4]
[ext_resource path="res://asset/ui/bar/bar_empty.png" type="Texture" id=5]
[ext_resource path="res://asset/ui/fonts/montserrat_eb_32.tres" type="DynamicFont" id=6]

[node name="squad_panel_detail_menu" type="PanelContainer"]
margin_right = 318.0
margin_bottom = 359.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 311.0
margin_bottom = 371.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 304.0
margin_bottom = 266.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 266.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
show_behind_parent = true
margin_right = 100.0
margin_bottom = 266.0
rect_min_size = Vector2( 100, 150 )
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_editor_description_": ""
}

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 304.0
margin_bottom = 266.0
grow_vertical = 0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 200.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 2 )
text = "Spearman"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Label2" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 32.0
margin_right = 200.0
margin_bottom = 152.0
text = "Spearman

 




"
fit_content_height = true
scroll_active = false

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 156.0
margin_right = 200.0
margin_bottom = 266.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_right = 56.0
margin_bottom = 110.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_right = 56.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
text = "Attack  "

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 56.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 15 )
text = "Armor  "

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 56.0
margin_bottom = 53.0
rect_min_size = Vector2( 0, 15 )
text = "Hit Point"

[node name="Label4" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 56.0
margin_bottom = 72.0
rect_min_size = Vector2( 0, 15 )
text = "Range  "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 56.0
margin_bottom = 91.0
rect_min_size = Vector2( 0, 15 )
text = "Speed  "

[node name="Label6" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_top = 95.0
margin_right = 56.0
margin_bottom = 110.0
rect_min_size = Vector2( 0, 15 )
text = "Morale "

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 60.0
margin_right = 200.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureProgress" type="TextureProgress" parent="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
margin_right = 140.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
value = 100.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true

[node name="TextureProgress2" type="TextureProgress" parent="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
margin_top = 19.0
margin_right = 140.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
value = 100.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true
__meta__ = {
"_editor_description_": ""
}

[node name="TextureProgress3" type="TextureProgress" parent="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
margin_top = 38.0
margin_right = 140.0
margin_bottom = 53.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
value = 100.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true

[node name="TextureProgress4" type="TextureProgress" parent="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
margin_top = 57.0
margin_right = 140.0
margin_bottom = 72.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
value = 100.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true

[node name="TextureProgress5" type="TextureProgress" parent="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
margin_top = 76.0
margin_right = 140.0
margin_bottom = 91.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
value = 100.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true

[node name="TextureProgress6" type="TextureProgress" parent="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
margin_top = 95.0
margin_right = 140.0
margin_bottom = 110.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
value = 100.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 270.0
margin_right = 304.0
margin_bottom = 280.0
rect_min_size = Vector2( 0, 10 )

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 284.0
margin_right = 304.0
margin_bottom = 364.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 6 )
text = "Recruit"
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
